--- a/content/faq/上記以外に質問があるのですが、どうしたら良いですか？.md
+++ b/content/faq/上記以外に質問があるのですが、どうしたら良いですか？.md
@@ -5,4 +5,4 @@ _build:
   list: "local"
 ---
 
-[デジクリ公式 Twitter](https://twitter.com/sitdigicre)宛に DM をお送りいただくか、[LINE オープンチャット](https://line.me/ti/g2/UfhEOyteJRjyQLm-c9Mmhj_9wvIKCBDEohh_WQ)または[メール](mailto:contact@digicre.net)にてお問い合わせください。
+[デジクリ公式 Twitter](https://twitter.com/sitdigicre)宛に DM をお送りいただくか、[メール](mailto:contact@digicre.net)にてお問い合わせください。
