--- a/content/faq/部員数を教えてください.md
+++ b/content/faq/部員数を教えてください.md
@@ -7,13 +7,10 @@ _build:
 
 **2025 年 11 月現在**、学部生・大学院生を合わせて **219 名**のデジクリ部員が活動しています。
 
-**過去 6 年間**の入学者（学部生）別の**内訳**は、下表の通りです。
+**過去 3 年間**の部員数の推移は、下表の通りです。
 
 | 入学年度 | 合計 | 女子 |
 | :------: | :--: | :--: |
 |   2025   | 219  |  36  |
 |   2024   | 116  |  19  |
 |   2023   | 121  |  18  |
-|   2022   |  86  |  13  |
-|   2021   |  50  |  7   |
-|   2020   |  18  |  2   |
